feat: add OS detection and start script generation to setup wizard
Detects Linux/macOS/Windows at wizard startup and displays it. After setup
completes, prompts to create a start script: on Linux/macOS a start.sh that
runs Nimbus in a screen session (with fallback if screen is missing), on
Windows a start.bat with pause on exit.

https://claude.ai/code/session_01UYSysDWxVuaHAvoXu8KWPo